macros/tests/trybuild/extern_crate.rs
use serde_args_macros::generate;

#[generate]
extern crate core;

fn main() {}
